Bug 468433 - Cannot paste in the search field of quick open view
Summary: Cannot paste in the search field of quick open view
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.12.2
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-12 19:53 UTC by Benjamin Randazzo
Modified: 2024-03-23 21:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Randazzo 2023-04-12 19:53:32 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open a project in Kate
2. Copy some text in the pasteboard (command + C)
3. Open the quick open view (via shortcut or menu Go > Quick Open)
4. Paste text from pasteboard (command + V)

OBSERVED RESULT
Text is pasted in the editor instead of the search field of quick open view.

EXPECTED RESULT
Text is pasted in the search field of quick open view.


SOFTWARE/OS VERSIONS
macOS: 13.3.1 (22E261)
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2023-04-12 19:57:42 UTC
can't reproduce on linux.

Can you share a video recording?
Comment 2 Benjamin Randazzo 2023-04-12 20:08:00 UTC
(In reply to Waqar Ahmed from comment #1)
> can't reproduce on linux.
> 
> Can you share a video recording?

I believe this is specific to macOS.
Here is a video showing the issue: https://b.randazzo.fr/uploads/bug468433.mov
Comment 3 Waqar Ahmed 2023-04-12 20:37:04 UTC
After you manually select paste from the menu, does Cmd+V work after that?
Comment 4 Benjamin Randazzo 2023-04-13 06:05:29 UTC
(In reply to Waqar Ahmed from comment #3)
> After you manually select paste from the menu, does Cmd+V work after that?

The text is still pasted in the editor view with Cmd+V.
Comment 5 Christoph Cullmann 2023-11-14 11:27:31 UTC
I had an similar issue, on macOS this doesn't work

    : QFrame(parent, Qt::Tool | Qt::FramelessWindowHint)

this does

    : QFrame(parent, Qt::Popup | Qt::FramelessWindowHint)
Comment 6 Christoph Cullmann 2023-11-14 13:47:56 UTC
;0 sorry, it is the other way around, Tool works on macOS
Comment 7 Waqar Ahmed 2023-11-20 10:00:17 UTC
Should be fixed after https://invent.kde.org/utilities/kate/-/merge_requests/1355
Comment 8 Waqar Ahmed 2023-12-02 12:56:56 UTC
Git commit 19c9a61a3e761aea8df07dcd5378680bc0de4062 by Waqar Ahmed.
Committed on 01/12/2023 at 13:42.
Pushed by cullmann into branch 'master'.

Make commandbar a normal widget instead of a window

Commandbar never really needed to be a window on its own because it was
always inside the parent widget. So far it has worked okay but it has
some issues on other platforms like not being able to paste text in
the QLineEdit on macOS.

This change makes the command bar a normal widget that is completely
handled by Qt. This has many advantages:
-> Same behaviour on all platforms
-> Application shortcuts now work from inside the command bar, this
   allows us to jump between various commandbar like widgets in Kate
   directly.
-> faster to open

M  +28   -16   src/kcommandbar.cpp
M  +5    -5    src/kcommandbar.h
M  +1    -0    src/kcommandbarmodel_p.cpp
M  +6    -6    tests/kcommandbartest.cpp

https://invent.kde.org/frameworks/kconfigwidgets/-/commit/19c9a61a3e761aea8df07dcd5378680bc0de4062
Comment 9 Benjamin Randazzo 2024-03-23 21:05:16 UTC
Thank you very much!